// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Correctly - Create 1`] = `
<main>
  <h1
    class="mx-10 mb-1"
  >
    <back-arrow-stub
      to=""
    />
    Update Course
    
  </h1>
   
  <div
    class="mx-12 mb-3"
  >
    <button
      class="button"
    >
      Update Course
    </button>
     
    <button
      class="button"
    >
      Delete Course
    </button>
  </div>
   
  <form
    class="shadow mx-12"
  >
    <text-input-stub
      label="Name:"
      type=""
      value=""
    />
     
    <text-input-stub
      label="Length (km): "
      type=""
      value="0"
    />
     
    <text-input-stub
      label="Climb (m):"
      type=""
      value="0"
    />
     
    <text-input-stub
      label="Controls:"
      type=""
      value=""
    />
  </form>
</main>
`;

exports[`Renders Correctly - Update 1`] = `
<main>
  <h1
    class="mx-10 mb-1"
  >
    <back-arrow-stub
      to=""
    />
    Update Course
    
  </h1>
   
  <div
    class="mx-12 mb-3"
  >
    <button
      class="button"
    >
      Update Course
    </button>
     
    <button
      class="button"
    >
      Delete Course
    </button>
  </div>
   
  <form
    class="shadow mx-12"
  >
    <text-input-stub
      label="Name:"
      type=""
      value="Test"
    />
     
    <text-input-stub
      label="Length (km): "
      type=""
      value="1000"
    />
     
    <text-input-stub
      label="Climb (m):"
      type=""
      value="2"
    />
     
    <text-input-stub
      label="Controls:"
      type=""
      value=""
    />
  </form>
</main>
`;
